Preserve argument order

Modify the solution used in d80d05f1 to use the begin_action_list variant
instead of _begin_action_hash.

Keep the _end_action_hash call; the calls can be used asynchronously and
_end_action_hash is better at collecting extra arguments.

https://bugzilla.gnome.org/show_bug.cgi?id=696762